[package]
name = "gridd"
version = "0.2.0"
authors = ["cmarcbs7 <smith7@uchicago.edu>"]
edition = "2018"
documentation = "https://docs.rs/gridd"
repository = "https://github.com/cmarcbs7/gridd"
description = "A generic, dirt-simple, two-dimensional grid."
keywords = [
    "2d",
    "grid",
    "2d-grid",
]
categories = [
    "data-structures",
]
license = "Apache-2.0 OR MIT"
maintenance = { status = "actively-developed" }
