[package]
name = "gridd"
version = "0.3.1"
authors = ["Frosh_VII <smith7@uchicago.edu>"]
edition = "2018"
documentation = "https://docs.rs/gridd"
repository = "https://github.com/FroshVII/gridd"
description = "Minimalist implementation of two-dimensional grids."
keywords = [
    "2d",
    "grid",
    "2d-grid",
]
categories = [
    "data-structures",
]
license = "Apache-2.0 OR MIT"
maintenance = { status = "actively-developed" }
